Update script source path for app.js

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   </head>
   <body>
-    <script src="Πρώτο website με js /app.js"></script>
+    <script src="website-only-js/app.js"></script>
       <script src="bower_components/aos/dist/aos.js"></script> 
       <script>
         AOS.init();
